modify the responsiveness as well as the pagination button

--- a/static/css/main.css
+++ b/static/css/main.css
@@ -105,6 +105,29 @@ body {
   margin: 0px auto;
 }
 
+@media (max-width: 1024px) {
+  .blog__listing {
+    max-width: 813px;
+  }
+}
+
+@media (max-width: 768px) {
+  .blog__listing {
+    max-width: 610px;
+    -webkit-box-pack: center;
+        -ms-flex-pack: center;
+            justify-content: center;
+  }
+}
+
+@media (max-width: 425px) {
+  .blog__listing {
+    -webkit-box-pack: center;
+        -ms-flex-pack: center;
+            justify-content: center;
+  }
+}
+
 .blog__listing__item {
   max-width: 330px;
   width: 100%;
@@ -282,6 +305,19 @@ body {
 
 @media (max-width: 1024px) {
   .blog__optimization__container {
+    gap: 15.5px;
+    max-width: 802px;
+  }
+}
+
+@media (max-width: 768px) {
+  .blog__optimization__container {
+    max-width: 601px;
+  }
+}
+
+@media (max-width: 425px) {
+  .blog__optimization__container {
     -ms-flex-wrap: wrap;
         flex-wrap: wrap;
     padding: 0;
@@ -296,6 +332,12 @@ body {
 .blog__optimization__content {
   max-width: 612.5px;
   width: 100%;
+}
+
+@media (max-width: 1024px) {
+  .blog__optimization__content {
+    max-width: 600px;
+  }
 }
 
 .blog__optimization__small__heading__name {
