--- a/static/scss/pages/_blog-detail.scss
+++ b/static/scss/pages/_blog-detail.scss
@@ -1,10 +1,10 @@
 .blog {
   @media (max-width: 1024px) {
     padding-left: 10px;
-    padding-right: 10px;   
+    padding-right: 10px;
   }
 
-  &__container{
+  &__container {
     width: 100%;
     max-width: 1144px;
     margin: 0px auto;
@@ -17,7 +17,19 @@
     width: 100%;
     max-width: 1144px;
     margin: 0px auto;
-    
+
+    @media (max-width: 1024px) {
+      max-width: 813px;
+    }
+
+    @media (max-width: 768px) {
+      max-width: 610px;
+      justify-content: center;
+    }
+
+    @media (max-width: 425px) {
+      justify-content: center;
+    }
 
     &__item {
       max-width: 330px;
@@ -71,7 +83,6 @@
 }
 
 .blog {
-
   &__title {
     font-weight: 900;
     font-size: 24px;
@@ -161,7 +172,7 @@
   border-radius: 5px;
 }
 
-.blog__extended__poster{
+.blog__extended__poster {
   width: 501px;
   height: 327px;
   object-position: center;
